--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -25,7 +25,7 @@ jobs:
               run: |
                   mkdir -p ./artifact/win/{cmd,pkgs}/
                   for file in `ls -vd ./windows/* | grep ".cmd"`; do
-                    echo "`cat ${file}`" >> ./artifact/win/cmd/index.html
+                    echo `cat ${file}` >> ./artifact/win/cmd/index.html
                   done
                   sed -i "s/::COMMIT_SHA::/${{ github.sha }}/g" ./artifact/win/cmd/index.html
                   sed -i "s/::TOTAL_STEPS::/`cat ./artifact/win/cmd/index.html | grep --count 'set /a currentSteps+=1'`/g" ./artifact/win/cmd/index.html
@@ -35,15 +35,19 @@ jobs:
               run: |
                   mkdir -p ./artifact/mac/
                   for file in `ls -vd ./macos/* | grep ".sh"; do
-                    echo "`cat ${file}`" >> ./artifact/mac/index.html
+                    echo `cat ${file}` >> ./artifact/mac/index.html
                   done
+                  cp ./macos/brew-casks.txt ./artifact/mac/brew-casks
+                  cp ./macos/brew-formulae.txt ./artifact/mac/brew-formulae
+                  cp ./macos/mas-packages.txt ./artifact/mac/mas-packages
 
             - name: Generate artifact for Linux
               run: |
                   mkdir -p ./artifact/linux/
                   for file in `ls -vd ./linux/* | grep ".sh"; do
-                    echo "`cat ${file}`" >> ./artifact/linux/index.html
+                    echo `cat ${file}` >> ./artifact/linux/index.html
                   done
+                  cp ./linux/apt-packages.txt ./artifact/linux/apt-packages
 
             - name: Generate top page from readme
               run: |
