--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -34,7 +34,7 @@ jobs:
             - name: Generate artifact for macOS
               run: |
                   mkdir -p ./artifact/mac/
-                  for file in `ls -vd ./macos/* | grep ".sh"; do
+                  for file in `ls -vd ./macos/* | grep ".sh"`; do
                     cat ${file} >> ./artifact/mac/index.html
                   done
                   cp ./macos/brew-casks.txt ./artifact/mac/brew-casks
@@ -44,7 +44,7 @@ jobs:
             - name: Generate artifact for Linux
               run: |
                   mkdir -p ./artifact/linux/
-                  for file in `ls -vd ./linux/* | grep ".sh"; do
+                  for file in `ls -vd ./linux/* | grep ".sh"`; do
                     cat ${file} >> ./artifact/linux/index.html
                   done
                   cp ./linux/apt-packages.txt ./artifact/linux/apt-packages
