--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -25,7 +25,8 @@ jobs:
               run: |
                   mkdir -p ./artifact/win/{cmd,pkgs}/
                   for file in `ls -vd ./windows/* | grep ".cmd"`; do
-                    echo `cat ${file}` >> ./artifact/win/cmd/index.html
+                    cat ${file} >> ./artifact/win/cmd/index.html
+                    echo '' >> ./artifact/win/cmd/index.html
                   done
                   sed -i "s/::COMMIT_SHA::/${{ github.sha }}/g" ./artifact/win/cmd/index.html
                   sed -i "s/::TOTAL_STEPS::/`cat ./artifact/win/cmd/index.html | grep --count 'set /a currentSteps+=1'`/g" ./artifact/win/cmd/index.html
@@ -35,7 +36,8 @@ jobs:
               run: |
                   mkdir -p ./artifact/mac/
                   for file in `ls -vd ./macos/* | grep ".sh"`; do
-                    echo `cat ${file}` >> ./artifact/mac/index.html
+                    cat ${file} >> ./artifact/mac/index.html
+                    echo '' >> ./artifact/win/cmd/index.html
                   done
                   cp ./macos/brew-casks.txt ./artifact/mac/brew-casks
                   cp ./macos/brew-formulae.txt ./artifact/mac/brew-formulae
@@ -45,7 +47,8 @@ jobs:
               run: |
                   mkdir -p ./artifact/linux/
                   for file in `ls -vd ./linux/* | grep ".sh"`; do
-                    echo `cat ${file}` >> ./artifact/linux/index.html
+                    cat ${file} >> ./artifact/linux/index.html
+                    echo '' >> ./artifact/win/cmd/index.html
                   done
                   cp ./linux/apt-packages.txt ./artifact/linux/apt-packages
 
