--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -23,7 +23,7 @@ jobs:
 
             - name: Generate artifact for Windows
               run: |
-                  mkdir -p ./artifact/win/{cmd,pkgs}/
+                  mkdir -p ./artifact/win/cmd
                   for file in `ls -vd ./windows/* | grep ".cmd"`; do
                     cat ${file} >> ./artifact/win/cmd/index.html
                     echo '' >> ./artifact/win/cmd/index.html
@@ -31,6 +31,7 @@ jobs:
                   sed -i "s/::COMMIT_SHA::/${{ github.sha }}/g" ./artifact/win/cmd/index.html
                   sed -i "s/::TOTAL_STEPS::/`cat ./artifact/win/cmd/index.html | grep --count 'set /a currentSteps+=1'`/g" ./artifact/win/cmd/index.html
                   cp ./windows/entrypoint.ps1 ./artifact/win/index.html
+                  cp ./windows/winget-packages.txt ./artifact/win/winget-packages
 
             - name: Generate artifact for macOS
               run: |
