--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -49,9 +49,11 @@ jobs:
                   mkdir -p ./artifact/linux/
                   for file in `ls -vd ./linux/* | grep ".sh"`; do
                     cat ${file} >> ./artifact/linux/index.html
-                    echo '' >> ./artifact/win/cmd/index.html
+                    echo '' >> ./artifact/linux/index.html
                   done
+                  sed -i "s/::COMMIT_SHA::/${{ github.sha }}/g" ./artifact/linux/index.html
                   cp ./linux/apt-packages.txt ./artifact/linux/apt-packages
+                  cp ./linux/flatpak-packages.txt ./artifact/linux/flatpak-packages
 
             - name: Generate top page from readme
               run: |
