--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -44,16 +44,26 @@ jobs:
                   cp ./macos/brew-formulae.txt ./artifact/mac/brew-formulae
                   cp ./macos/mas-packages.txt ./artifact/mac/mas-packages
 
-            - name: Generate artifact for Linux
+            - name: Generate artifact for Ubuntu
               run: |
-                  mkdir -p ./artifact/linux/
-                  for file in `ls -vd ./linux/* | grep ".sh"`; do
-                    cat ${file} >> ./artifact/linux/index.html
-                    echo '' >> ./artifact/linux/index.html
+                  mkdir -p ./artifact/ubuntu/
+                  for file in `ls -vd ./ubuntu/* | grep ".sh"`; do
+                    cat ${file} >> ./artifact/ubuntu/index.html
+                    echo '' >> ./artifact/ubuntu/index.html
                   done
-                  sed -i "s/::COMMIT_SHA::/${{ github.sha }}/g" ./artifact/linux/index.html
-                  cp ./linux/apt-packages.txt ./artifact/linux/apt-packages
-                  cp ./linux/flatpak-packages.txt ./artifact/linux/flatpak-packages
+                  sed -i "s/::COMMIT_SHA::/${{ github.sha }}/g" ./artifact/ubuntu/index.html
+                  cp ./ubuntu/apt-packages.txt ./artifact/ubuntu/apt-packages
+                  cp ./ubuntu/flatpak-packages.txt ./artifact/ubuntu/flatpak-packages
+
+            - name: Generate artifact for Arch
+              run: |
+                  mkdir -p ./artifact/arch/
+                  for file in `ls -vd ./arch/* | grep ".sh"`; do
+                    cat ${file} >> ./artifact/arch/index.html
+                    echo '' >> ./artifact/arch/index.html
+                  done
+                  sed -i "s/::COMMIT_SHA::/${{ github.sha }}/g" ./artifact/arch/index.html
+                  cp ./arch/packages.txt ./artifact/arch/packages
 
             - name: Generate top page from readme
               run: |
